# nvcf-otelconfig

./: .gitignore  .goheader.tmpl  .golangci.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  start-generator.sh  update-examples.sh  validate-config.sh
.github/: PULL_REQUEST_TEMPLATE.md  dco.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  submit-question.md
.github/workflows/: ci.yml  security.yml
backendconfig/: embed_config.go  embed_config_test.go  funcmap.go  sourceconfig.go  types.go
backendconfig/source_templates/: src-config-k8s-container.yaml.tmpl  src-config-k8s-helm.yaml.tmpl  src-config-vm-container.yaml.tmpl  src-config-vm-helm.yaml.tmpl
backendconfig/templates/: config-vm-helm.yaml.tmpl
config/: render.go  render_test.go  telemetries.go
generator/: README.md  generator.py  markdown_helper.py  pyproject.toml  template_helper.py
generator/doc/: README.md
generator/templates/: processors_generator.py  prometheus_config_generator.py
testdata/: README.md
testdata/create/: main.go
validator/charts/dummy-function/: Chart.yaml  values-k8s-container.yaml  values-k8s-helm.yaml  values-vm-container.yaml  values-vm-helm.yaml  values.yaml
validator/charts/dummy-function/templates/: deployment.yaml  namespace.yaml
validator/charts/kube-state-metrics/: Chart.yaml  values-k8s.yaml
validator/charts/otel-collector/: Chart.yaml  values.yaml
validator/cli/: README.md  pyproject.toml
validator/cli/src/: models.py  utils.py  validator.py
