# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "config-generator"
version = "0.1.0"
description = "Generates OpenTelemetry Collector config templates and platform-metrics README from a single YAML source (source-config.yaml) for byoo-otel-collector."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.0.3",
    "PyYAML>=5.4.1",
]
